# trade-ai

./: Cargo.toml  LICENSE  README.md  trade_logs.jsonl
prompt/: system.md  system_bak.md
src/: ai_decision.rs  ai_log.rs  ai_prompt.rs  command.rs  config.rs  deepseek.rs  error_log.rs  main.rs  monitor.rs  notify.rs  okx.rs  okx_analytics.rs  test_indicators.rs  trade_log.rs  tui.rs
