[package]
name = "trade-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0.100"
reqwest-websocket = "0.5.1"
futures-util = { version = "0.3.31", features = ["sink"] }
ratatui = "0.29.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
unicode-width = "0.1"
once_cell = "1.19"
